ros2_ws/log/build_2024-11-26_13-37-00/drone_home/stderr.log
  File "/home/pi/drone-home/ros2_ws/install/drone_home/lib/python3.12/site-packages/drone_home/gps_imu_publisher.py", line 161
    timer_period 1 = #0.01  # todo refert to fast seconds
                 ^
SyntaxError: invalid syntax

